--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,3 +11,12 @@ Style/StringLiteralsInInterpolation:
 
 Layout/LineLength:
   Max: 120
+
+Metrics/MethodLength:
+  CountComments: false
+  Max: 10
+  Exclude:
+    - '**/migrations/*'
+
+Style/Documentation:
+  Enabled: false
